# trufel

./: .gitignore  .prettierignore  .prettierrc  .projectile  Cargo.toml  README.org  jsconfig.json  package.json  svelte.config.js  vite.config.js
.cargo/: config
hugsql/: Cargo.toml
hugsql/src/: lib.rs
hugsqlx/: Cargo.toml  README.org
hugsqlx/hugsqlx-analyzer/: Cargo.toml
hugsqlx/hugsqlx-analyzer/src/: lib.rs  parser.rs
hugsqlx/hugsqlx-derive/: Cargo.toml
hugsqlx/hugsqlx-derive/src/: lib.rs
hugsqlx/src/: lib.rs
resources/db/migrations/: V20200208153153__create_migrations_schema.sql  V20200209002531__create_base_schema.sql
resources/db/queries/: applications.sql  bookmarks.sql  categories.sql  users.sql
src/: db.rs  errors.rs  extractors.rs  jwt.rs  main.rs  middlewares.rs  sentry.rs  telemetry.rs  vault.rs
src/db/: migrations.rs  mod.rs
src/models/: application.rs  bookmark.rs  category.rs  mod.rs  user.rs
src/pusher/: model.rs
src/routes/: bookmarks.rs  categories.rs  components.rs  mod.rs  pusher.rs  users.rs
src/templates/: layout.rs
src/user/: model.rs
webapp/: app.html
webapp/lib/: Autocomplete.svelte  Banner.svelte  Callback.svelte  CommandMenu.svelte  CommandMenuItem.svelte  CommandMenuSection.svelte  DetailsDialog.svelte  Dialog.svelte  IconComposer.svelte  IconsGallery.svelte  LogButton.svelte  Notification.svelte  Pulse.svelte  SecurityContext.svelte  SessionButton.svelte  Spinner.svelte  Tab.svelte  TabsBar.svelte  Toggle.svelte  authService.js  icons.js  store.js  types.js
webapp/routes/: +layout.svelte  +page.svelte  style.css
webapp/routes/authenticated/: +layout.svelte
webapp/routes/authenticated/profile/: +page.server.js  +page.svelte
webapp/routes/callback/: +page.svelte
webapp/routes/silent-check-sso/: +page.svelte
webapp/static/: keycloak.json
