[package]
name = "trufel"
version = "0.1.0"
edition = "2021"

[dependencies]

# hugsqlx = {version = "0.1.0", features = ["postgres"],  git = "https://github.com/mbuczko/hugsqlx", branch = "develop"}
hugsqlx = {version = "0.1.5", features = ["postgres", "tracing"], path = '../rust/hugsqlx'}

axum = {version = "0.6.0-rc.2", features = ["headers"]}
tokio = {version = "1.21.1", features = ["full"]}
serde = {version = "1.0.145", features = ["derive"]}
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
sqlx = {version = "0.6.2", features = [ "postgres", "macros", "time", "uuid", "runtime-tokio-rustls" ]}
reqwest = {version = "0.11.12", features = ["json"]}
serde_json = "1.0.85"
futures = "0.3.24"
headers = "0.3"
alcoholic_jwt = "4091.0.0"
thiserror = "1.0.37"
anyhow = "1.0.65"
async-trait = "0.1.57"
uuid = {version = "1.1.2", features = ["v4", "serde"]}
semver = "1.0.14"
rust-embed = "6.4.1"
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
tracing-opentelemetry = "0.18.0"
tracing-log = "0.1.3"
opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "metrics", "rt-tokio"]}
opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "metrics"]}
futures-core = "0.3.24"
hmac = "0.12.1"
sha2 = "0.10.6"
subtle-encoding = "0.5.1"
axum-macros = "0.3.0"

[dependencies.tower-http]
version = "*"
features = ["add-extension", "cors", "compression-full", "trace"]

