[package]
name = "trufel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0.145", features = ["derive"]}
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
axum = {version = "0.7"}
axum-extra = {version = "0.9.1", features = ["typed-header"]}
sqlx = {version = "0.7.3", features = [ "sqlite", "macros", "time", "uuid", "runtime-tokio-rustls" ]}
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0.85"
futures = "0.3.24"
headers = "0.3"
alcoholic_jwt = "4091.0.0"
thiserror = "1.0.37"
anyhow = "1.0.65"
uuid = {version = "1.1.2", features = ["v4", "serde"]}
semver = "1.0.14"
rust-embed = "6.4.1"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.3"
tracing-opentelemetry = "0.18.0"
opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "metrics", "rt-tokio"]}
opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "metrics"]}
sentry = {version = "0.29.0", features = ["anyhow", "tower"]}
sentry-tracing = "0.29.0"
percent-encoding = "2.2.0"

[dependencies.tower-http]
version = "*"
features = ["add-extension", "cors", "compression-full", "trace"]
