[package]
name = "trufel"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = {version = "1", features = ["full"]}
serde = {version = "1.0.145", features = ["derive"]}
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
axum = {version = "0.7"}
axum-extra = {version = "0.9.1", features = ["typed-header"]}
# axum-macros = "0.3.0"
sqlx = {version = "0.7.3", features = [ "sqlite", "macros", "time", "uuid", "runtime-tokio-rustls" ]}
hugsqlx = {version = "0.3.0", features = ["sqlite"]}
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0.85"
futures = "0.3.24"
alcoholic_jwt = "4091.0.0"
thiserror = "1.0.37"
anyhow = "1.0.65"
uuid = {version = "1.1.2", features = ["v4", "serde"]}
semver = "1.0.14"
rust-embed = "6.4.1"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
tracing-opentelemetry = "0.22.0"
opentelemetry = {version = "0.21.0", features = ["trace", "metrics"]}
opentelemetry_sdk = {version = "0.21.0", features = ["trace", "metrics", "rt-tokio"]}
opentelemetry-otlp = {version = "0.14.0", features = ["http-proto", "reqwest-rustls", "metrics"]}
hmac = "0.12.1"
sha2 = "0.10.6"
subtle-encoding = "0.5.1"
pusher = "0.4.5"
sentry = {version = "0.29.0", features = ["anyhow", "tower"]}
sentry-tracing = "0.29.0"
percent-encoding = "2.2.0"
lazy_static = "1.4.0"

[dependencies.tower-http]
version = "*"
features = ["fs", "add-extension", "cors", "compression-full", "trace"]

