[package]
name = "hugsqlx"
version = "0.1.0"
description = "A macro generating functions from SQL queries"
repository = "https://github.com/mbuczko/hugsqlx"
documentation = "https://docs.rs/hugsqlx/latest/hugsqlx/"
readme = "README.org"
authors = ["Michał Buczko"]
edition = "2021"

[lib]

[workspace]
members = ["hugsqlx-derive", "hugsqlx-analyzer"]

[dependencies]
hugsqlx-derive = { version = "0.1.0", path = "hugsqlx-derive" }
